--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.3.1.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0-M1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
